--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   },
   "devDependencies": {
     "babel-loader": "^5.1.3",
+    "babel-core": "^5.0.9",
+    "babel": "^5.0.9",
     "static": "^2.0.0",
     "static-server": "^2.0.0",
     "webpack": "^1.9.8"
   },
   "dependencies": {
-    "alt": "^0.16.0",
+    "alt": "0.16.0",
     "react": "^0.13.3"
   }
 }
