--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "webpack": "^1.9.8"
   },
   "dependencies": {
-    "alt": "0.16.0",
+    "alt": "^0.16.5",
+    "es5-shim": "^4.1.3",
     "react": "^0.13.3"
   }
 }
